# happah-graphics

./: .gitignore  Makefile.am  README.md  configure.ac
lib/: Makefile.am
lib/happah/: graphics.hpp
lib/happah/graphics/: Buffer.cpp  Buffer.hpp  CheckGLError.hpp  DataType.cpp  DataType.hpp  Memory.hpp  Program.cpp  Program.hpp  RenderContext.cpp  RenderContext.hpp  Shader.cpp  Shader.hpp  Uniform.cpp  Uniform.hpp  VertexArray.cpp  VertexArray.hpp  Viewport.cpp  Viewport.hpp  glad.c  glad.h
shaders/: checkerboard.g.glsl  checkerboard.v.glsl  edge.f.glsl  edge.g.glsl  edge.v.glsl  euclidean-checkerboard.f.glsl  euclidean-checkerboard.g.glsl  geometry.h.glsl  hiedge.f.glsl  hiedge.g.glsl  hiedge.v.glsl  highlight-lines.f.glsl  hyperbolic-checkerboard.f.glsl  hyperbolic-checkerboard.g.glsl  illumination.h.glsl  loop-box-spline.te.glsl  normals.g.glsl  paint.h.glsl  patches.f.glsl  patches.g.glsl  patches.v.glsl  quartic-patch.te.glsl  quintic-patch.te.glsl  simple.f.glsl  simple.v.glsl  sold-wireframe.f.glsl  solid-wireframe.f.glsl  solid-wireframe.g.glsl  sphere-impostor.f.glsl  sphere-impostor.g.glsl  triangles.f.glsl  triangles.g.glsl  triangles.v.glsl  wireframe.f.glsl  wireframe.g.glsl  wireframe.v.glsl
