# Copyright 2017
#   Pawel Herman - Karlsruhe Institute of Technology
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE or copy at http://www.boost.org/LICENSE_1_0.txt)

AC_INIT(libhappah-graphics, 0.0, pherman@ira.uka.de)
AC_CONFIG_AUX_DIR(build)
AC_CONFIG_MACRO_DIR(m4)
AC_ENABLE_SHARED
AC_DISABLE_STATIC

AM_INIT_AUTOMAKE(foreign subdir-objects)

LT_INIT

AC_PROG_CXX
AM_PROG_LIBTOOL

AC_CONFIG_FILES(Makefile lib/Makefile)
AC_OUTPUT

